--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="wd5.3/index.html">WD5.3</a></li>
         <li><a href="js1.0/index.html">JS1.0</a></li>
         <li><a href="js1.1/index.html">JS1.1</a></li>
+        <li><a href="js1.2/index.html">JS1.2</a></li>
     </ul>
 
 
