--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <li><a href="js1.0/index.html">JS1.0</a></li>
         <li><a href="js1.1/index.html">JS1.1</a></li>
         <li><a href="js1.2/index.html">JS1.2</a></li>
+        <li><a href="js1.3/index.html">JS1.2</a></li>
+        <li><a href="js1.4/index.html">JS1.2</a></li>
+        <li><a href="js1.5/index.html">JS1.2</a></li>
+        <li><a href="js1.6/index.html">JS1.2</a></li>
+        <li><a href="js1.7/index.html">JS1.2</a></li>
+        <li><a href="js1.8/index.html">JS1.2</a></li>
     </ul>
 
 
