--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <li><a href="js1.6/index.html">JS1.6</a></li>
         <li><a href="js1.7/index.html">JS1.7</a></li>
         <li><a href="js1.8/index.html">JS1.8</a></li>
+        <li><a href="js1.9/index.html">JS1.9</a></li>
+        <li><a href="js1.10/index.html">JS1.10</a></li>
     </ul>
 
 
