--- a/js1.10/index.html
+++ b/js1.10/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <style>
+        H1 { 
+         font-size: 120%; 
+         font-family: Verdana, Arial, Helvetica, sans-serif; 
+         color: #333366; 
+        }
+    </style>
+     
     <script><!--
         function Complete1()
         {
