--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         <li><a href="js1.8/index.html">JS1.8</a></li>
         <li><a href="js1.9/index.html">JS1.9</a></li>
         <li><a href="js1.10/index.html">JS1.10</a></li>
+        <li><a href="js4.1/index.html">JS4.1</a></li>
+        <li><a href="js4.2/index.html">JS4.2</a></li>
+        <li><a href="js4.3/index.html">JS4.3</a></li>
+        <li><a href="js4.4/index.html">JS4.4</a></li>
+        <li><a href="js4.5/index.html">JS4.5</a></li>
+        <li><a href="js4.6/index.html">JS4.6</a></li>
+        <li><a href="js4.7/index.html">JS4.7</a></li>
+        <li><a href="js4.8/index.html">JS4.8</a></li>
+        <li><a href="js4.9/index.html">JS4.9</a></li>
     </ul>
 
 
