--- a/js4.2/index.html
+++ b/js4.2/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Add React in One Minute</title>
+    <title>JS4.2</title>
   </head>
   <body>
 
