--- a/js4.5/index.html
+++ b/js4.5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Hello React</title>
+    <title>JS4.5</title>
 </head>
 <body>
     <div id="app"></div>
