--- a/js4.7/list/index.html
+++ b/js4.7/list/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Hello React</title>
+    <title>JS4.7-Clock</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
