--- a/js4.8/index.html
+++ b/js4.8/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>JS4.8</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -12,8 +13,7 @@
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.25.0/babel.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-
+    
     <script type="text/babel" src="index.jsx"></script>
 </body>
 
