--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
         <li><a href="js4.6/index.html">JS4.6</a></li>
         <li><a href="js4.7/index.html">JS4.7</a></li>
         <li><a href="js4.8/index.html">JS4.8</a></li>
-        <li><a href="js4.9/index.html">JS4.9</a></li>
+        <li><a href="js4.10/index.html">JS4.10</a></li>
+        <li><a href="js4.11/public/index.html">JS4.11</a></li>
+        <li><a href="js4.12/public/index.html">JS4.12</a></li>
+        <li><a href="js4.13/public/index.html">JS4.13</a></li>
+        <li><a href="js4.14/public/index.html">JS4.14</a></li>
+        <li><a href="js4.15/public/index.html">JS4.15</a></li>
     </ul>
 
 
