--- a/index.html
+++ b/index.html
@@ -12,36 +12,37 @@
   </head>
   <body>
     <ul>
-        <li><a href="wd1.1/index.html">WD1.1</a></li>
-        <li><a href="wd4.1/index.html">WD4.1</a></li>
-        <li><a href="wd5.1/index.html">WD5.1</a></li>
-        <li><a href="wd5.2/index.html">WD5.2</a></li>
-        <li><a href="wd5.3/index.html">WD5.3</a></li>
-        <li><a href="js1.0/index.html">JS1.0</a></li>
-        <li><a href="js1.1/index.html">JS1.1</a></li>
-        <li><a href="js1.2/index.html">JS1.2</a></li>
-        <li><a href="js1.3/index.html">JS1.3</a></li>
-        <li><a href="js1.4/index.html">JS1.4</a></li>
-        <li><a href="js1.5/index.html">JS1.5</a></li>
-        <li><a href="js1.6/index.html">JS1.6</a></li>
-        <li><a href="js1.7/index.html">JS1.7</a></li>
-        <li><a href="js1.8/index.html">JS1.8</a></li>
-        <li><a href="js1.9/index.html">JS1.9</a></li>
-        <li><a href="js1.10/index.html">JS1.10</a></li>
-        <li><a href="js4.1/index.html">JS4.1</a></li>
-        <li><a href="js4.2/index.html">JS4.2</a></li>
-        <li><a href="js4.3/index.html">JS4.3</a></li>
-        <li><a href="js4.4/index.html">JS4.4</a></li>
-        <li><a href="js4.5/index.html">JS4.5</a></li>
-        <li><a href="js4.6/index.html">JS4.6</a></li>
-        <li><a href="js4.7/index.html">JS4.7</a></li>
-        <li><a href="js4.8/index.html">JS4.8</a></li>
-        <li><a href="js4.10/index.html">JS4.10</a></li>
-        <li><a href="js4.11/public/index.html">JS4.11</a></li>
-        <li><a href="js4.12/public/index.html">JS4.12</a></li>
-        <li><a href="js4.13/public/index.html">JS4.13</a></li>
-        <li><a href="js4.14/public/index.html">JS4.14</a></li>
-        <li><a href="js4.15/public/index.html">JS4.15</a></li>
+      <li><a href="wd1.1/index.html">WD1.1</a></li>
+      <li><a href="https://sergeysh93.github.io/layout1/">WD1.2</a></li>
+      <li><a href="wd4.1/index.html">WD4.1</a></li>
+      <li><a href="wd5.1/index.html">WD5.1</a></li>
+      <li><a href="wd5.2/index.html">WD5.2</a></li>
+      <li><a href="wd5.3/index.html">WD5.3</a></li>
+      <li><a href="js1.0/index.html">JS1.0</a></li>
+      <li><a href="js1.1/index.html">JS1.1</a></li>
+      <li><a href="js1.2/index.html">JS1.2</a></li>
+      <li><a href="js1.3/index.html">JS1.3</a></li>
+      <li><a href="js1.4/index.html">JS1.4</a></li>
+      <li><a href="js1.5/index.html">JS1.5</a></li>
+      <li><a href="js1.6/index.html">JS1.6</a></li>
+      <li><a href="js1.7/index.html">JS1.7</a></li>
+      <li><a href="js1.8/index.html">JS1.8</a></li>
+      <li><a href="js1.9/index.html">JS1.9</a></li>
+      <li><a href="js1.10/index.html">JS1.10</a></li>
+      <li><a href="js4.1/index.html">JS4.1</a></li>
+      <li><a href="js4.2/index.html">JS4.2</a></li>
+      <li><a href="js4.3/index.html">JS4.3</a></li>
+      <li><a href="js4.4/index.html">JS4.4</a></li>
+      <li><a href="js4.5/index.html">JS4.5</a></li>
+      <li><a href="js4.6/index.html">JS4.6</a></li>
+      <li><a href="js4.7/index.html">JS4.7</a></li>
+      <li><a href="js4.8/index.html">JS4.8</a></li>
+      <li><a href="js4.10/index.html">JS4.10</a></li>
+      <li><a href="js4.11/public/index.html">JS4.11</a></li>
+      <li><a href="js4.12/public/index.html">JS4.12</a></li>
+      <li><a href="js4.13/public/index.html">JS4.13</a></li>
+      <li><a href="js4.14/public/index.html">JS4.14</a></li>
+      <li><a href="js4.15/index.html">JS4.15</a></li>
     </ul>
 
 
