--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li><a href="js4.8/index.html">JS4.8</a></li>
       <li><a href="js4.10/index.html">JS4.10</a></li>
       <li><a href="js4.11/public/index.html">JS4.11</a></li>
-      <li><a href="js4.12/public/index.html">JS4.12</a></li>
+      <li><a href="js4.12/app/build/index.html">JS4.12</a></li>
       <li><a href="js4.13/public/index.html">JS4.13</a></li>
       <li><a href="js4.14/public/index.html">JS4.14</a></li>
       <li><a href="js4.15/index.html">JS4.15</a></li>
